Adding random forest algorithm

--- a/SpamFilterDetector.ipynb
+++ b/SpamFilterDetector.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "4                                                           [i, have, a, date, on, sunday, with, will]  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "4                                                                                       [date, sunday]  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "4                                                                                       [date, sunday]  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "4                                                                                       [date, sunday]  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
        "4                                                                                       [date, sunday]  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1100,13 +1100,316 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "# Let's take only 20 messages from our pool\n",
     "data_sample = data[0:20]\n",
     "\n",
     "tfidf_vect_sample = TfidfVectorizer(analyzer=clean_text)\n",
     "X_tfidf_sample = tfidf_vect_sample.fit_transform(data_sample['body_text'])\n",
     "print(X_tfidf_sample.shape)\n",
-    "print(tfidf_vect_sample.get_feature_names())\n"
+    "print(tfidf_vect_sample.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create a Sparse Matrix out of this structure\n",
+    "Let's now wrap this object into a panda's dataframe so we can visualize it better.\n",
+    "<br>Take into consideration that each row index represents to a given message from our dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>08002986030</th>\n",
+       "      <th>08452810075over18</th>\n",
+       "      <th>09061701461</th>\n",
+       "      <th>1</th>\n",
+       "      <th>100</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>150pday</th>\n",
+       "      <th>16</th>\n",
+       "      <th>2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wont</th>\n",
+       "      <th>word</th>\n",
+       "      <th>wwwdbuknet</th>\n",
+       "      <th>xxxmobilemovieclub</th>\n",
+       "      <th>xxxmobilemovieclubcomnqjkgighjjgcbl</th>\n",
+       "      <th>ye</th>\n",
+       "      <th>£100000</th>\n",
+       "      <th>£900</th>\n",
+       "      <th>ü</th>\n",
+       "      <th>‘</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.238737</td>\n",
+       "      <td>0.209853</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.198986</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.157831</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 204 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   08002986030  08452810075over18  09061701461    1  100   11   12  150pday  \\\n",
+       "0          0.0           0.000000          0.0  0.0  0.0  0.0  0.0      0.0   \n",
+       "1          0.0           0.198986          0.0  0.0  0.0  0.0  0.0      0.0   \n",
+       "2          0.0           0.000000          0.0  0.0  0.0  0.0  0.0      0.0   \n",
+       "3          0.0           0.000000          0.0  0.0  0.0  0.0  0.0      0.0   \n",
+       "4          0.0           0.000000          0.0  0.0  0.0  0.0  0.0      0.0   \n",
+       "\n",
+       "    16         2  ...      wont      word  wwwdbuknet  xxxmobilemovieclub  \\\n",
+       "0  0.0  0.000000  ...  0.238737  0.209853         0.0                 0.0   \n",
+       "1  0.0  0.157831  ...  0.000000  0.000000         0.0                 0.0   \n",
+       "2  0.0  0.000000  ...  0.000000  0.000000         0.0                 0.0   \n",
+       "3  0.0  0.000000  ...  0.000000  0.000000         0.0                 0.0   \n",
+       "4  0.0  0.000000  ...  0.000000  0.000000         0.0                 0.0   \n",
+       "\n",
+       "   xxxmobilemovieclubcomnqjkgighjjgcbl   ye  £100000  £900    ü    ‘  \n",
+       "0                                  0.0  0.0      0.0   0.0  0.0  0.0  \n",
+       "1                                  0.0  0.0      0.0   0.0  0.0  0.0  \n",
+       "2                                  0.0  0.0      0.0   0.0  0.0  0.0  \n",
+       "3                                  0.0  0.0      0.0   0.0  0.0  0.0  \n",
+       "4                                  0.0  0.0      0.0   0.0  0.0  0.0  \n",
+       "\n",
+       "[5 rows x 204 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can now create a dataframe out of this object just to visualize it in a better way\n",
+    "X_tfidf_df = pd.DataFrame(X_tfidf_sample.toarray())\n",
+    "X_tfidf_df.columns = tfidf_vect_sample.get_feature_names()\n",
+    "X_tfidf_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5) Feature Engineering\n",
+    "This section can be quite big, depending on how well you understand the data that you're working with.\n",
+    "<br>We will proceed to fit the model only with the different weights for each word or token present on each message (this is, the TF-IDF matrix). However,I'm pretty sure there are many other metrics that can be relevant as well from our data.\n",
+    "<br> For example, we can think of the following relations:\n",
+    "<br> - Are longer messages more likely to be spam?\n",
+    "<br> - Are messages that contain a lot of punctuation more likely to be spam?\n",
+    "<br> - Is there a relation in between messages that contain a lot of capital words with them being spam or not?\n",
+    "<br> Like this, our list can be huge, and maybe it's nice that we analyze this ideas and see if it's worth or not to add extra columns with this information. For this tutorial I won't do, I will leave it as it is, but I encourage you to try it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6) Machine Learning Algorithm - fit/train our model\n",
+    "We've come to the most interesting part, we have our data pre-processed and formatted so it can be understood by a machine Learning algorithm.\n",
+    "<br>What is a machine learning model? We can think of it as a model that can learn and make associations from data on where we train it and then make predictions based on it. A ML model will be good if it's able not only to adapt to the data we're using to train it with, but also to generalize to data that has never seen before.\n",
+    "<br> This type of ML is also called as supervised learning, and it's the approach we will follow in this example.\n",
+    "\n",
+    "<br>\n",
+    "<br>There are a couple of concepts that have to be explained here. First of all is how are we supposed to train our model. For this, we have something called the holdout test set, which is the sample of data not used in fitting (training) a model for the purpose of evaluating the model's ability to generalize unseen data.\n",
+    "<br>We'll be primarily using K-fold cross-validation to evaluate our model (https://machinelearningmastery.com/k-fold-cross-validation/). The idea is that the full data set is divided into k-subsets and the holdout method is repeated k times. Each time, one of the k-subsets is used as the test set and the other k-1 subsets are put together to be used to train the model. For each evaluation, we will get a result of the metric we are testing for.\n",
+    "\n",
+    "<br>\n",
+    "<br><b>Which metrics can we consider?</b>\n",
+    "<br>In this example, we will cover 3 of them:\n",
+    "<br> -Accuracy: basically the number predicted correctly divided by the total number of observations.\n",
+    "<br> -Precision: within the context of the problem we're working with, this would be the number predicted as spam that are actually spam divided by the total number predicted as spam.\n",
+    "<br> -Recall: this would be the number predicted as spam that are actually spam divided by the total number that are actually as spam.\n",
+    "<br>Something really important is that knowing only accuracy is not enough. In the case of recall and precision, we can notice that the numerator in both cases is the same (the amount correctly identified) while the denominator is different.\n",
+    "<br><b>If false positives are really costly (this depends on the business), we will want to optimize our model for precision. If false negatives are really costly, we want to optimize the model for recall.</b>\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br><b>Ensamble Method</b><br>\n",
+    "Random forest (https://en.wikipedia.org/wiki/Random_forest#Algorithm) is one type of a machine learning algorithm that falls into the category of the ensamble learners which use an ensamble method. This is a technique that creates multiple models and then combines them to produce better results than any of the single models individually.\n",
+    "<br>You can basically combine multiple weaker models into a stronger one.\n",
+    "<br> Random forest is an ensamble learning method that constructs a collection of decision trees and then aggregates the predictions of each tree to determine the final prediction. The number of trees that integrate the model is called \"n_estimators\". Let's say we use 100 of them, basically each one of them is going to vote individually if it thinks the message is spam or ham. We then combine the 100 votes and the majority of them will win (if 60 predicted spam then it will be spam the final prediction).\n",
+    "\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.97396768, 0.97486535, 0.97396768, 0.96316262, 0.96855346])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "\n",
+    "# We use n_jobs=-1 so it can parallelize. IMPORTANT: we're using the default parameters here\n",
+    "rf = RandomForestClassifier(n_jobs=-1)\n",
+    "\n",
+    "# n_splits is the k of the k-folds, for this case we will use 5.\n",
+    "k_fold = KFold(n_splits=5)\n",
+    "\n",
+    "# Take into consideration that we need to send the features (the token matrix) separated from the labels that\n",
+    "# correspond to them. In this case, we will measure accuracy\n",
+    "cross_val_score(rf, X_tfidf, data['label'], cv=k_fold, scoring=\"accuracy\", n_jobs=-1)\n",
+    "\n",
+    "# LINES OF CODE IS ALL THAT TOOK US TO IMPLEMENT THE MODEL AND VALIDATE IT WITH K-FOLD CROSS VALIDATION"
    ]
   },
   {
@@ -1117,18 +1420,18 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### 5) Machine Learning Algorithm - fit/train our model"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### 6) Spam filter - system to filter emails"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
