Almost there, testing metrics

--- a/SpamFilterDetector.ipynb
+++ b/SpamFilterDetector.ipynb
@@ -1413,25 +1413,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Testing multiple parameters\n",
+    "As I mentioned before, there are many parameters that can be tuned. For instance, we didn't touch any parameters when defining our Random Forest model. There're basically two parameters that are quite insteresting to mess with: n_estimators and max_depth.\n",
+    "<br>There's a popular method in where we can test them, which is called as grid search, and the idea behind it is to iterate through many different values of these parameters and try to determine which is the model that produces the best results."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import precision_recall_fscore_support as score\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Est: 10 / Depth: 10 ---->Precision: 1.0 / Recall: 0.226 / Accuracy: 0.905\n",
+      "Est: 10 / Depth: 25 ---->Precision: 1.0 / Recall: 0.591 / Accuracy: 0.95\n",
+      "Est: 10 / Depth: None ---->Precision: 0.99 / Recall: 0.759 / Accuracy: 0.969\n",
+      "Est: 25 / Depth: 10 ---->Precision: 1.0 / Recall: 0.234 / Accuracy: 0.906\n",
+      "Est: 25 / Depth: 25 ---->Precision: 1.0 / Recall: 0.65 / Accuracy: 0.957\n",
+      "Est: 25 / Depth: None ---->Precision: 1.0 / Recall: 0.788 / Accuracy: 0.974\n",
+      "Est: 50 / Depth: 10 ---->Precision: 1.0 / Recall: 0.175 / Accuracy: 0.899\n",
+      "Est: 50 / Depth: 25 ---->Precision: 1.0 / Recall: 0.664 / Accuracy: 0.959\n",
+      "Est: 50 / Depth: None ---->Precision: 1.0 / Recall: 0.781 / Accuracy: 0.973\n",
+      "Est: 70 / Depth: 10 ---->Precision: 1.0 / Recall: 0.241 / Accuracy: 0.907\n",
+      "Est: 70 / Depth: 25 ---->Precision: 1.0 / Recall: 0.635 / Accuracy: 0.955\n",
+      "Est: 70 / Depth: None ---->Precision: 1.0 / Recall: 0.774 / Accuracy: 0.972\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split our test and train data by taking a 0.2 of it for testing\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X_tfidf, data['label'], test_size=0.2)\n",
+    "\n",
+    "def train_random_forest(estimators,depth):\n",
+    "    # Create the random forest classifier\n",
+    "    rf = RandomForestClassifier(n_estimators=estimators, max_depth=depth, n_jobs=-1)\n",
+    "    \n",
+    "    # Train the model\n",
+    "    rf_model = rf.fit(x_train,y_train)\n",
+    "    \n",
+    "    # Predict generate predctions for the test data\n",
+    "    y_pred = rf_model.predict(x_test)\n",
+    "    \n",
+    "    # Analyze metrics for those predictions\n",
+    "    precision,recall,fscore,support = score(y_test,y_pred,pos_label=\"spam\",average=\"binary\")\n",
+    "    \n",
+    "    # Print them so we can visualize for each iteration\n",
+    "    accuracy = round(((y_pred == y_test).sum()/len(y_test)),3)\n",
+    "    print(f\"Est: {estimators} / Depth: {depth} ---->\" +  \n",
+    "          f\"Precision: {round(precision,3)} / Recall: {round(recall,3)} / Accuracy: {accuracy}\")\n",
+    "    \n",
+    "    \n",
+    "# Create a for loop to test different possibilities\n",
+    "for estimators in [10,25,50,70]:\n",
+    "    for depth in [10,25,None]:\n",
+    "        train_random_forest(estimators,depth)"
+   ]
   },
   {
    "cell_type": "code",
